feat: adds support for TCA Airbus Joystick and Throttle and fixes t.rudder pedals prefab

--- a/JoystickProxyWin/Joystick Proxy/settings.ini
+++ b/JoystickProxyWin/Joystick Proxy/settings.ini
@@ -29,3 +29,5 @@
 03ef:2004 = VPC-Star-Citizen-L
 03ec:2005 = VPC-Star-Citizen-R
 044f:b68f = Thrustmaster Pendular Rudder
+044f:0407 = TCA Q-Eng 1&2
+044f:0405 = T.A320 Pilot
